--- a/style.css
+++ b/style.css
@@ -482,3 +482,7 @@ h2 { margin: 0 0 12px; font-size: 20px; }
   margin-bottom: 9px;     
   line-height: 1.35;     
 }
+.leaflet-control-zoom {
+  display: none !important;
+}
+
